err/guano.err
Listing '.'...
Listing './bin'...
Compiling './bin/batlogger2guano.py'...
Compiling './bin/d500x2guano.py'...
Compiling './bin/disperse.py'...
Compiling './bin/guano_dump.py'...
Compiling './bin/guano_edit.py'...
Compiling './bin/guano_form.py'...
Compiling './bin/sb2guano.py'...
Compiling './bin/timestamps.py'...
***   File "./bin/timestamps.py", line 22
    print fmt, '\t', len(fmt), '\t', parse_timestamp(fmt), '\t', parse_timestamp(fmt).isoformat()
            ^
SyntaxError: invalid syntax

Compiling './bin/wamd2guano.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/guano-1.0.11.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
